<resources>
    <string name="app_name">SamBook</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notification</string>
    <string name="profile">Profile</string>
    <string name="title_activity_list_more_book">ListMoreBook</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="comments">Comments</string>
    <string name="miki_ito">Miki Ito</string>
    <string name="booker">Booker</string>
    <string name="address"><![CDATA[Address: thanh pho Bien Hoa, Dong Nai, Viet Nam.]]></string>
    <string name="_34">34</string>
    <string name="books">Books</string>
    <string name="_1256">1256</string>
    <string name="reviews">Reviews</string>
    <string name="_8942">8942</string>
    <string name="requests">Requests</string>
    <string name="photos">Photos</string>
    <string name="stats">Stats</string>
    <string name="charts">Charts</string>
    <string name="details">Details</string>

    <!--  Lorem  -->
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisl orci, interdum quis pretium eget, tincidunt at nisi. Morbi sodales a ante quis dapibus. Donec et ultrices massa. Nullam sodales sapien vel sapien mattis viverra. Vivamus a massa at sapien imperdiet varius. Praesent nibh massa, pharetra sit amet dapibus vel, rhoncus convallis quam. Mauris vel ipsum ac velit sagittis volutpat. Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas tempor magna lacus, non malesuada dolor faucibus sed. Vestibulum viverra eget ipsum non lacinia. Duis volutpat efficitur porttitor. Duis vestibulum in tellus vitae sodales. Cras dignissim enim in elit vulputate efficitur. Mauris molestie, magna nec interdum pretium, velit libero dignissim dolor, a sagittis leo elit sed mauris.

Proin tempus pellentesque facilisis. Mauris sit amet porta justo, nec dignissim tellus. Phasellus rhoncus purus eros, non rhoncus dui ullamcorper eu. Aliquam at auctor enim. Donec vitae orci arcu. Integer sed finibus ipsum, ac luctus velit. Curabitur euismod, risus ut mattis bibendum, leo orci pharetra enim, et lobortis turpis quam et elit.

Duis scelerisque, purus id dapibus venenatis, justo enim fermentum enim, in iaculis ligula turpis vitae ex. Maecenas turpis tellus, aliquam nec ex at, gravida eleifend augue. Mauris nec libero quis quam pretium convallis quis eget justo. Maecenas fringilla enim a pharetra pretium. Nunc tempor gravida erat nec ultricies. Proin ut sapien aliquam, pretium metus eu, accumsan odio. Maecenas molestie pretium lorem nec molestie. Aliquam sed dui quis dui volutpat tempus. Donec commodo quam in felis pharetra, eget scelerisque lorem tincidunt.

Vestibulum nibh magna, varius consequat felis sed, consequat cursus nisl. Donec ut feugiat sapien, imperdiet egestas ex. Sed mattis mattis leo, nec finibus ex auctor id. Cras mattis dolor nec arcu vestibulum, id ornare tortor dapibus. Aenean nec nibh ante. Fusce venenatis pellentesque iaculis. Nullam nec tempus nulla, vitae facilisis nisi. Donec blandit pharetra auctor. Praesent laoreet dolor sed mauris facilisis, ut pretium urna condimentum. Vestibulum sed accumsan neque.

Integer feugiat elementum mauris, sodales placerat purus aliquet ut. Curabitur quis venenatis justo. Vivamus blandit feugiat libero eu placerat. Curabitur sed ligula vehicula, blandit magna blandit, sagittis dui. Ut malesuada sapien posuere lectus mollis imperdiet. Maecenas venenatis massa sed fringilla mattis. Aliquam ut odio non lectus faucibus venenatis at eu nisi. Mauris interdum ex cursus mi dignissim dapibus consequat eget metus. Nullam at aliquet urna. Aliquam sollicitudin metus velit, eu pellentesque odio hendrerit nec. Suspendisse id nunc id sapien euismod viverra. Vestibulum viverra nisl ipsum, vitae hendrerit neque pretium ac. Praesent quis mauris lobortis nisl sodales interdum. Quisque aliquam velit eu turpis aliquet tincidunt.</string>

    <!--  Login activity  -->
    <string name="login_welcome">Chào mừng đến với SamBook</string>
    <string name="login_sign_in">Đăng nhập</string>
    <string name="login_username">Tên đăng nhập</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_login">ĐĂNG NHẬP</string>
    <string name="login_forget_password">Quên mật khẩu?</string>

    <!--  Navigation  -->
    <string name="navigation_home">Trang chủ</string>
    <string name="navigation_search">Tìm kiếm</string>
    <string name="navigation_notification">Thông báo</string>
    <string name="navigation_profile">Tài khoản</string>

    <!--  Home Fragment  -->
    <string name="home_greeting">Chào</string>
    <string name="home_greeting2">Hãy khám phá những cuốn sách mới</string>
    <string name="home_trending">Sách nổi bật</string>
    <string name="home_new_release">Sách mới phát hành</string>
    <string name="home_recommend">Dành cho bạn</string>
    <string name="home_more">Xem thêm</string>

    <!--  Profile Fragment  -->
    <string name="profile_books">Sách</string>
    <string name="profile_reviews">Đánh giá</string>
    <string name="profile_requests">Yêu cầu</string>
    <string name="profile_logout">Đăng xuất</string>

    <!--  Edit Profile Activity  -->
    <string name="edit_profile_edit">Chỉnh sửa hồ sơ cá nhân</string>
    <string name="edit_profile_name">Họ tên</string>
    <string name="edit_profile_address">Địa chỉ</string>
    <string name="edit_profile_password">Mật khẩu</string>
    <string name="edit_profile_retype_password">Nhập lại mật khẩu</string>
    <string name="edit_profile_confirm">Xác nhận</string>

    <!--  Register activity  -->
    <string name="register_sign_up">Tạo tài khoản SamBook</string>
    <string name="register_username">Tên đăng nhập</string>
    <string name="register_password">Mật khẩu</string>
    <string name="register_retype_password">Nhập lại mật khẩu</string>
    <string name="register_name">Họ tên</string>
    <string name="register_address">Địa chỉ</string>
    <string name="register_register">Đăng ký</string>

    <!--  Forget password dialog  -->
    <string name="forget_password_message">Nhập email khôi phục mật khẩu</string>
    <string name="forget_password_hint">Email khôi phục mật khẩu</string>
    <string name="forget_password_cancel">Hủy</string>
    <string name="forget_password_ok">Xác nhận</string>

    <!--  Book detail activity  -->
    <string name="author">Tác giả:</string>
    <string name="add_to_shelf">Thêm vào tủ</string>
    <string name="borrow">Mượn sách</string>
    <string name="information_tab">Thông tin sách</string>
    <string name="review_tab">Đánh giá</string>
    <string name="information">Nội dung sách</string>
    <string name="review">Đánh giá của bạn</string>
    <string name="review_list">Danh sách đánh giá</string>
    <string name="edit_review">Viết bình luận</string>
    <string name="edit_reviewed">Sửa bình luận</string>
    <string name="edit_review_hint">Viết bình luận của bạn về tựa sách này</string>
    <string name="edit_review_exit_confirm_title">Hủy nhận xét</string>
    <string name="edit_review_exit_confirm">Bạn có chắc không muốn lưu nhận xét này?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>

    <!--  Settings activity  -->
    <string name="settings">Settings</string>
    <string name="bookmark_list">Bookmark List</string>
    <string name="reading_history">Reading History</string>
    <string name="waiting_update_books">Waiting Update Books</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign Out</string>

    <!--  Borrow activity  -->
    <string name="borrow_book">Mượn sách</string>

    <!--  Borrow detail activity  -->
    <string name="borrow_detail_title">Bạn gửi yêu cầu mượn sách tới</string>
    <string name="borrow_detail_duration">Thời hạn mượn sách:</string>
    <string name="borrow_detail_request_send_date">Thời gian gửi yêu cầu:</string>
    <string name="borrow_detail_send_message">Gửi tin nhắn tới</string>
    <string name="borrow_detail_send_request">Gửi yêu cầu</string>

    <!--  Request detail activity  -->
    <string name="request_detail_accept_request">Chấp nhận</string>
    <string name="request_detail_cancel_request">Từ chối</string>
    <string name="request_detail_cancel_request2">Hủy yêu cầu</string>
    <string name="request_detail_contacting_request">Liên lạc</string>
    <string name="request_detail_lending_request">Cho mượn sách</string>
    <string name="request_detail_returning_request">Trả sách</string>
    <string name="request_detail_lost_request">Thất lạc sách</string>

    <!--  Chat Activity  -->
    <string name="chat_enter_message">Nhập tin nhắn ở đây</string>
    <string name="chat_enter">GỬI</string>

</resources>
