<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_message"
        android:textColor="@color/colorPurple"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/forget_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="30dp"
        android:inputType="text"
        android:padding="10dp"
        android:hint="@string/forget_password_hint"
        android:textColor="@color/regular_text_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/forget_password_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_uisquare"
            android:text="@string/forget_password_cancel"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"/>
        <Button
            android:id="@+id/forget_password_btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_uisquare"
            android:text="@string/forget_password_ok"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>
</LinearLayout>