<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sam.sambook.ui.home.HomeFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_bookDetailActivity"
            app:destination="@id/bookDetailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.sam.sambook.ui.search.SearchFragment"
        android:label="@string/navigation_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_bookDetailActivity"
            app:destination="@id/bookDetailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.sam.sambook.ui.notification.NotificationFragment"
        android:label="@string/navigation_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sam.sambook.ui.profile.ProfileFragment"
        android:label="@string/navigation_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_chatActivity"
            app:destination="@id/chatActivity" />
        <action
            android:id="@+id/action_navigation_profile_to_editReviewActivity"
            app:destination="@id/editReviewActivity" />
    </fragment>
    <activity
        android:id="@+id/chatActivity"
        android:name="com.sam.sambook.activity.ChatActivity"
        android:label="activity_chat"
        tools:layout="@layout/activity_chat" />
    <activity
        android:id="@+id/editReviewActivity"
        android:name="com.sam.sambook.activity.EditReviewActivity"
        android:label="activity_edit_profile"
        tools:layout="@layout/activity_edit_profile" />
    <activity
        android:id="@+id/bookDetailActivity"
        android:name="com.sam.sambook.activity.BookDetailActivity"
        android:label="activity_book_detail"
        tools:layout="@layout/activity_book_detail" />

</navigation>