<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/book_detail_review_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/review"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/regular_text_color"/>

        <RatingBar
            android:id="@+id/book_detail_review_rating_bar_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/book_detail_review_title"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="0.1"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:theme="@style/RatingBarDark"/>

        <TextView
            android:id="@+id/book_detail_edit_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_review"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/linkColor"
            android:textSize="14sp"
            android:layout_below="@id/book_detail_review_rating_bar_active"/>

        <TextView
            android:id="@+id/book_detail_review_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/book_detail_edit_review"
            android:text="@string/review_list"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/regular_text_color"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_book_detail_review"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/book_detail_review_list_title"/>

    </RelativeLayout>

</RelativeLayout>