<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.EditReviewActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/header_register"
        android:elevation="10dp"
        android:theme="@style/ToolbarTheme" />

    <TextView
        android:id="@+id/edit_profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:elevation="10dp"
        android:text="@string/edit_profile_edit"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:transitionName="login" />

    <ImageView
        android:id="@+id/edit_profile_circle2"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-87dp"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/circle" />

    <ImageView
        android:id="@+id/edit_profile_circleTes"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/edit_profile_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-50dp"
        android:src="@drawable/circlet" />

    <ScrollView
        android:id="@+id/edit_profile_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/edit_profile_rlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/edit_profile_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="35dp">

                    <TextView
                        android:id="@+id/edit_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/edit_profile_name"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_profile_edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edit_profile_name"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/primaryColor" />

                    <TextView
                        android:id="@+id/edit_profile_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edit_profile_edit_name"
                        android:layout_margin="15dp"
                        android:text="@string/edit_profile_address"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_profile_edit_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edit_profile_address"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/primaryColor" />

                    <TextView
                        android:id="@+id/edit_profile_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edit_profile_edit_address"
                        android:layout_margin="15dp"
                        android:text="@string/edit_profile_password"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_profile_edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edit_profile_password"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/primaryColor" />

                    <TextView
                        android:id="@+id/edit_profile_re_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edit_profile_edit_password"
                        android:layout_margin="15dp"
                        android:text="@string/edit_profile_retype_password"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_profile_edit_re_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edit_profile_re_password"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/primaryColor" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edit_profile_cv"
                android:layout_alignRight="@+id/edit_profile_cv"
                android:layout_alignBottom="@+id/edit_profile_cv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="-20dp"
                android:elevation="10dp">

                <Button
                    android:id="@+id/edit_profile_btn_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bt_uisquare"
                    android:text="@string/edit_profile_confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>